Add CyclicBarrierExample